[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mozcrypt-lib"
version = "0.1.0"
description = "Military grade encryption, one line."
authors = [{ name = "Oduke", email = "odukem622@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["cryptography"]
